# apertium-fao-dan

./: .gitattributes  .gitignore  ACKNOWLEDGEMENTS  Makefile.am  README  apertium-fao-dan.dan-fao.t1x  apertium-fao-dan.fao-dan.dix  apertium-fao-dan.fao-dan.lrx  apertium-fao-dan.fao-dan.rtx  apertium-fao-dan.fao-dan.t1x  apertium-fao-dan.fao-dan.t2x  configure.ac  dk-fo.n.ut.rev.tsv  modes.xml
dev/: swadesh_list.txt  wiki.n.xml  wiki.np-top.xml
dev/bidix/: dkfo_conv.py  fao-dan  fao-nor-entries  fao-nor-entries-sorted  intersection  make_fao-dan_entries.py  make_fao-nor_entries.py  proc-dkfo.py  sort.py
dev/testvoc/: generation.sh
test/: fao-dan-input.txt  tests.json
test/expected/: fao-dan-biltrans.txt  fao-dan-generator.txt  fao-dan-morph.txt  fao-dan-pretransfer.txt  fao-dan-transfer.txt
test/gold/: fao-dan-generator.txt
texts/: politik.fao.txt  sprakdeklarasjonen.dan.txt  sprakdeklarasjonen.fao.txt  story.dan.txt  story.fao.txt
